==> RicardoSung/RT-Thread/Lecture_FinSH_LED/Middlewares/Third_Party/RealThread_RTOS_RT-Thread/bsp/board.c <==
/*
 * Copyright (c) 2006-2019, RT-Thread Development Team
 *
 * SPDX-License-Identifier: Apache-2.0
 *
 * Change Logs:
 * Date           Author       Notes
 * 2017-07-24     Tanek        the first version
 * 2018-11-12     Ernest Chen  modify copyright
 */
 
#include <stdint.h>
#include <rthw.h>
#include <rtthread.h>
#include "usart.h"
#include "gpio.h"

#include "main.h"
//extern UART_HandleTypeDef huart1;
//extern void MX_USART_UART_Init(void);

#define _SCB_BASE       (0xE000E010UL)
#define _SYSTICK_CTRL   (*(rt_uint32_t *)(_SCB_BASE + 0x0))
#define _SYSTICK_LOAD   (*(rt_uint32_t *)(_SCB_BASE + 0x4))
#define _SYSTICK_VAL    (*(rt_uint32_t *)(_SCB_BASE + 0x8))
#define _SYSTICK_CALIB  (*(rt_uint32_t *)(_SCB_BASE + 0xC))
#define _SYSTICK_PRI    (*(rt_uint8_t  *)(0xE000ED23UL))

// Updates the variable SystemCoreClock and must be called 
// whenever the core clock is changed during program execution.
extern void SystemCoreClockUpdate(void);

// Holds the system core clock, which is the system clock 
// frequency supplied to the SysTick timer and the processor 
// core clock.
extern uint32_t SystemCoreClock;

static uint32_t _SysTick_Config(rt_uint32_t ticks)
{
    if ((ticks - 1) > 0xFFFFFF)
    {
        return 1;
    }
    
    _SYSTICK_LOAD = ticks - 1; 
    _SYSTICK_PRI = 0xFF;
    _SYSTICK_VAL  = 0;
    _SYSTICK_CTRL = 0x07;  
    
    return 0;
}



#if defined(RT_USING_USER_MAIN) && defined(RT_USING_HEAP)
#define RT_HEAP_SIZE 1024
static uint32_t rt_heap[RT_HEAP_SIZE];     // heap default size: 4K(1024 * 4)
RT_WEAK void *rt_heap_begin_get(void)
{
    return rt_heap;
}

RT_WEAK void *rt_heap_end_get(void)
{
    return rt_heap + RT_HEAP_SIZE;
}
#endif

/**
 * This function will initial your board.
 */
void rt_hw_board_init()
{
    /* System Clock Update */
    SystemCoreClockUpdate();
	
	MX_GPIO_Init();
	
	MX_USART1_UART_Init();
    
    /* System Tick Configuration */
    _SysTick_Config(SystemCoreClock / RT_TICK_PER_SECOND);
	


    /* Call components board initial (use INIT_BOARD_EXPORT()) */
#ifdef RT_USING_COMPONENTS_INIT
    rt_components_board_init();
#endif
	
//#if defined(RT_USING_CONSOLE)&&defined(RT_USING_FINSH)
//	rt_console

#if defined(RT_USING_USER_MAIN) && defined(RT_USING_HEAP)
    rt_system_heap_init(rt_heap_begin_get(), rt_heap_end_get());
#endif
}

void SysTick_Handler(void)
{
    /* enter interrupt */
    rt_interrupt_enter();

    rt_tick_increase();

    /* leave interrupt */
    rt_interrupt_leave();
}

//void rt_hw_console_output(const char *str)
//{
//        rt_size_t i = 0, size = 0;
//        char a = '\r';
//        
//        __HAL_UNLOCK(&huart1);
//        
//        size = rt_strlen(str);
//        for (i = 0; i < size; i++)
//        {
//        if (*(str + i) == '\n')
//        {
//                HAL_UART_Transmit(&huart1, (uint8_t *)&a, 1, 1);
//        }
//         HAL_UART_Transmit(&huart1, (uint8_t *)(str + i), 1, 1);
//        }
//}

void rt_hw_console_output(const char *str)
{
	rt_enter_critical();
	while(*str!='\0')
	{
		if(*str=='\n')
		{
			HAL_UART_Transmit(&huart1,(uint8_t *)'\r',1,1000);
		}
		HAL_UART_Transmit(&huart1,(uint8_t *)(str++),1,1000);
	}
	rt_exit_critical();
}

char rt_hw_console_getchar(void)
{
        int ch = -1;
        if (__HAL_UART_GET_FLAG(&huart1, UART_FLAG_RXNE) != RESET)
        {
                ch = huart1.Instance->DR & 0xff;
        }
        else
        {
                if(__HAL_UART_GET_FLAG(&huart1, UART_FLAG_ORE) != RESET)
                {
                        __HAL_UART_CLEAR_OREFLAG(&huart1);
                }
                rt_thread_mdelay(10);
        }
        return ch;
}
